--- a/slider.css
+++ b/slider.css
@@ -1,24 +1,4 @@
-@keyframes slidy {
-0% { left: 0%; }
-20% { left: 0%; }
-25% { left: -100%; }
-45% { left: -100%; }
-50% { left: -200%; }
-70% { left: -200%; }
-75% { left: -300%; }
-95% { left: -300%; }
-100% { left: -400%; }
-}
-
-body { margin: 0; } 
-div#slider { overflow: hidden; }
-div#slider figure img { width: 20%; float: left; }
-div#slider figure { 
-  position: relative;
-  width: 500%;
-  margin: 0;
-  left: 0;
-  text-align: center;
-  font-size: 0;
-  animation: 20s slidy infinite; 
+#slidy-container { 
+width: 100%; margin: 0 auto;
+box-shadow: 0 0 12px rgba(0,0,0,0.4); 
 }
